2010-05-21  Jan Nijtmans  <nijtmans@users.sf.net>

	* tools/installData.tcl   Make sure that copyDir only receives normalized
	paths. Backported from trunk.
	* generic/tclPlatDecls.h. Fix <tchar.h> inclusion for CYGWIN. Backported
	from trunk (although for trunk this was moved to tclWinPort.h)
	* generic/tclPathObj.c    Fix Tcl_SetStringObj usage for CYGWIN. This
	function can only be used with unshared objects. This causes a crash
	on CYGWIN. (backported from trunk)
	* generic/tclFileName.c   Don't declare cygwin_conv_to_win32_path here.
	* win/tclWinChan.c        Fix various minor other gcc warnings, like
	* win/tclWinConsole.c     signed<->unsigned mismatch. Backported from
	* win/tclWinDde.c         trunk.
	* win/tclWinNotify.c
	* generic/tclStrToD.c:    [Bug #3005233] fix for build on OpenBSD vax

2010-05-19 Alexandre Ferrieux  <ferrieux@users.sourceforge.net>

	* generic/tclDictObj.c: Backport of fix for [Bug 3004007], EIAS
	* tests/dict.test:      violation in list-dict conversions.

2010-05-07  Andreas Kupries  <andreask@activestate.com>

	* library/platform/platform.tcl: Fix cpu name for Solaris/Intel 64bit.
	* library/platform/pkgIndex.tcl: Package updated to version 1.0.8.
	* unix/Makefile.in:		
	* win/Makefile.in:

2010-04-30  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclBinary.c (UpdateStringOfByteArray):        Add panic
	when the generated string representation would grow beyond Tcl's
	size limits.  [Bug 2994924]

2010-04-29  Andreas Kupries  <andreask@activestate.com>

	* library/platform/platform.tcl: Another stab at getting the /lib,
	* library/platform/pkgIndex.tcl: /lib64 difference right for
	* unix/Makefile.in: linux. Package updated to version 1.0.7.
	* win/Makefile.in:

2010-04-29  Kevin B. Kenny  <kennykb@acm.org>

	* library/tzdata/Antarctica/Macquarie:
	* library/tzdata/Africa/Casablanca:
	* library/tzdata/Africa/Tunis:
	* library/tzdata/America/Santiago:
	* library/tzdata/America/Argentina/San_Luis: